--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "chat in nodejs",
   "main": "index.js",
   "scripts": {
-    "test": "nodemon index.js"
+    "test": "node index.js"
   },
   "repository": {
     "type": "git",
@@ -15,5 +15,8 @@
   "bugs": {
     "url": "https://github.com/perseu912/chat/issues"
   },
-  "homepage": "https://github.com/perseu912/chat#readme"
+  "homepage": "https://github.com/perseu912/chat#readme",
+  "dependencies": {
+    "express": "^4.17.1"
+  }
 }
