n consigo resolver este pequeno bug do butao de login

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "chat in nodejs",
   "main": "index.js",
   "scripts": {
-    "test": "node index.js",
+    "test": "nodemon index.js",
     "start": "node index.js"
   },
   "repository": {
