--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "express": "^4.17.1",
     "http": "0.0.0",
+    "mkdirp": "^0.5.1",
     "path": "^0.12.7",
     "socket.io": "^2.2.0"
   }
