--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "chat in nodejs",
   "main": "index.js",
   "scripts": {
-    "test": "nodemon index.js",
+    "test": "DEBUG=* nodemon index.js",
     "start": "node index.js"
   },
   "repository": {
@@ -18,6 +18,8 @@
   },
   "homepage": "https://github.com/perseu912/chat#readme",
   "dependencies": {
+    "bunyan": "^1.8.12",
+    "debug": "^4.1.1",
     "express": "^4.17.1",
     "http": "0.0.0",
     "mkdirp": "^0.5.1",
